--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
 deploy:
   provider: heroku
   api_key:
-    secure: KEY
+    secure: $KEY
   app: graphql-react-apollo
   on:
     repo: akilananb/graphql-react-apollo
